# backend

./: Anchor.toml  Cargo.toml  STATUS.md  world-config.json
programs-ecs/components/competition/: Cargo.toml
programs-ecs/components/competition/src/: lib.rs
programs-ecs/components/leaderboard/: Cargo.toml
programs-ecs/components/leaderboard/src/: lib.rs
programs-ecs/components/position/: Cargo.toml
programs-ecs/components/position/src/: lib.rs
programs-ecs/components/trading-account/: Cargo.toml
programs-ecs/components/trading-account/src/: lib.rs
programs-ecs/systems/close-position/: Cargo.toml
programs-ecs/systems/close-position/src/: lib.rs
programs-ecs/systems/join-competition/: Cargo.toml
programs-ecs/systems/join-competition/src/: lib.rs
programs-ecs/systems/open-position/: Cargo.toml
programs-ecs/systems/open-position/src/: lib.rs
programs-ecs/systems/settle-competition/: Cargo.toml
programs-ecs/systems/settle-competition/src/: lib.rs
programs/contracts/src/: lib.rs
scripts/: init-config.ts  init-world.ts  register-components.ts  setup-competition.ts
tests/: executor.ts  initialise.ts
