[package]
name = "position"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "position"

[features]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
bolt-lang = { workspace = true }
anchor-lang = { workspace = true }
