[package]
name = "join-competition"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "join_competition"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
bolt-lang = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
competition = { workspace = true }
trading-account = { workspace = true }
leaderboard = { workspace = true }
